# wx4py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: index.html  styles.css
examples/: auto_reply_groups_ai.py  auto_reply_groups_custom_ai.py  batch_send.py  get_chat_history.py  get_group_members.py  modify_announcement_simple.py  search.py  send_file.py  send_files.py  send_to_contact.py  send_to_group.py  set_announcement_from_markdown.py  set_do_not_disturb.py  set_group_nickname.py  set_pin_chat.py
src/: __init__.py  _version.py  ai.py  client.py  config.py
src/core/: __init__.py  exceptions.py  listener.py  uiautomation.py  window.py
src/features/messaging/: __init__.py  history.py  listener.py
src/pages/: base.py  chat_window.py  group_manager.py
src/utils/: clipboard_utils.py  logger.py  win32.py
wx4-skill/: SKILL.md
